--- a/.github/workflows/ros_build_and_lint.yml
+++ b/.github/workflows/ros_build_and_lint.yml
@@ -4,9 +4,9 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, test_action ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, test_action ]
   
   workflow_dispatch:
 
