Added unit testing

--- a/.github/workflows/ros_build_and_lint.yml
+++ b/.github/workflows/ros_build_and_lint.yml
@@ -40,4 +40,17 @@ jobs:
           name: colcon-logs
           path: ros_ws/log
         if: always()
-
+  unit_test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Python 3
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.6
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run tests with pytest
+        run: pytest 
