--- a/.github/workflows/ros_build_and_lint.yml
+++ b/.github/workflows/ros_build_and_lint.yml
@@ -53,5 +53,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip freeze > requirements.txt
+          pip install pytest
       - name: Run tests with pytest
         run: python3 -m pytest 
