--- a/.github/workflows/ros_build_and_lint.yml
+++ b/.github/workflows/ros_build_and_lint.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip freeze > requirements.txt
+          pip install pytest
       - name: Run tests with pytest
         run: python3 -m pytest 
 
@@ -54,9 +55,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: install cppunit
         run: sudo apt install -y libcppunit-dev
+      - name: autoconf
+        run: autoconf
       - name: configure
         run: ./configure
       - name: make
         run: make
+      - name: make install
+        run: make install
       - name: make test
         run: make test
