--- a/.github/workflows/ros_build_and_lint.yml
+++ b/.github/workflows/ros_build_and_lint.yml
@@ -55,13 +55,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: install cppunit
         run: sudo apt install -y libcppunit-dev
-      - name: autoconf
-        run: autoconf --install
       - name: configure
-        run: ./configure
-      - name: make
-        run: make
-      - name: make install
-        run: make install
-      - name: make test
-        run: make test
+        run: autoconf && ./configure && make && make install && make test
